Fix newline and tab character filters
Add raw original data to the translations row and use it for the "copy from original" code, then remove the filtering of the invisibles tab/nl so that translations can contain these UTF characters.  Also convert "copy from original" to a button and added two new buttons to make it easier to add tab and newline characters to the translation.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -403,11 +403,16 @@ span.morethan90 {
 /*
  * Translation Row Editor
  */
-.editor .original {
+.editor .original, .editor .original_raw {
 	font-weight: bold;
 	white-space: pre-wrap;
 	max-width: 50em;
 	word-break: break-all;
+}
+
+.editor .original_raw {
+	visibility: hidden;
+	height: 0px;
 }
 
 .editor .translation {
@@ -433,6 +438,10 @@ span.morethan90 {
 
 .editor .strings p.plural-numbers span.numbers {
 	font-weight: bold;
+}
+
+.editor .actions {
+	padding-top: 15px;
 }
 
 .editor .textareas, .editor .actions {
